--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,10 @@
 [tox]
 envlist =
+    format,
     lint,
-    # test,
+    flake8,
+    test,
+    pytest
     check-migrations,
 
 [testenv:lint]
@@ -17,16 +20,6 @@ deps =
     pep8-naming
 commands =
     flake8 {posargs:.}
-
-[testenv:type]
-skipsdist = true
-skip_install = true
-deps =
-    mypy
-    django-stubs
-    djangorestframework-stubs
-commands =
-    mypy {posargs:.}
 
 [testenv:format]
 skipsdist = true
