--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 staticfiles/
+atlascope_plugins/
 
 # Created by https://www.gitignore.io/api/django
 # Edit at https://www.gitignore.io/?templates=django
