--- a/tox.ini
+++ b/tox.ini
@@ -61,6 +61,8 @@ passenv =
     DJANGO_MINIO_STORAGE_SECRET_KEY
 extras =
     dev
+deps =
+    importlib_metadata
 commands =
     {envpython} ./manage.py makemigrations --check --dry-run
 
@@ -76,6 +78,8 @@ ignore =
     W503,
     # Missing docstring in *
     D10,
+    # Single vs double quotes conflicting with black
+    Q000,
 
 [pytest]
 DJANGO_SETTINGS_MODULE = atlascope.settings
