Move frontend github actions spec to top-level .github

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -1,15 +1,22 @@
-name: CI
+name: Web
 on:
   pull_request:
     branches:
       - main
+    paths:
+      - "web/**"
   push:
     branches:
       - main
+    paths:
+      - "web/**"
 jobs:
   build-and-test:
     name: Build and test
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web
     steps:
       - uses: actions/checkout@master
 
