Clarify the Ubuntu LTS version used in GitHub Actions
As of 12/29/2021, `ubuntu-latest` is `ubuntu-20.04`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
     - cron: "0 0 * * *"
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     services:
       postgres:
         image: postgres:latest
