Explicitly reference `gdal` and `pyproj` in tox `deps`

--- a/tox.ini
+++ b/tox.ini
@@ -45,6 +45,13 @@ deps =
     pytest-factoryboy
     pytest-mock
     importlib_metadata
+    # We explicitly reference `gdal` and `pyproj` here
+    # so that their versions can be constrained
+    # with tox's `--force-dep` option.
+    # This allows to us match the correct versions to what
+    # versions of library files are available.
+    gdal
+    pyproj
 commands =
     pytest {posargs}
 
@@ -61,6 +68,13 @@ extras =
     dev
 deps =
     importlib_metadata
+    # We explicitly reference `gdal` and `pyproj` here
+    # so that their versions can be constrained
+    # with tox's `--force-dep` option.
+    # This allows to us match the correct versions to what
+    # versions of library files are available.
+    gdal
+    pyproj
 commands =
     {envpython} ./manage.py makemigrations --check --dry-run
 
