--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,9 @@ jobs:
           libgeos-dev
       - name: Run tests
         run: |
-          tox
+          tox \
+            --force-dep gdal==3.0.4 \
+            --force-dep pyproj~=2.0
         env:
           DJANGO_DATABASE_URL: postgres://postgres:postgres@localhost:5432/django
           DJANGO_MINIO_STORAGE_ENDPOINT: localhost:9000
