Set minimum `importlib_metadata` dependency

--- a/tox.ini
+++ b/tox.ini
@@ -44,7 +44,7 @@ deps =
     pytest-django
     pytest-factoryboy
     pytest-mock
-    importlib_metadata
+    importlib_metadata>=3.6
     # We explicitly reference `gdal` and `pyproj` here
     # so that their versions can be constrained
     # with tox's `--force-dep` option.
@@ -67,7 +67,7 @@ passenv =
 extras =
     dev
 deps =
-    importlib_metadata
+    importlib_metadata>=3.6
     # We explicitly reference `gdal` and `pyproj` here
     # so that their versions can be constrained
     # with tox's `--force-dep` option.
