Allow `tox` to access system packages
GDAL requires numpy to install. This is the only way to get it in there.

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ passenv =
     DJANGO_MINIO_STORAGE_ACCESS_KEY
     DJANGO_MINIO_STORAGE_ENDPOINT
     DJANGO_MINIO_STORAGE_SECRET_KEY
+sitepackages = true
 extras =
     dev
 deps =
@@ -58,6 +59,7 @@ commands =
 [testenv:check-migrations]
 setenv =
     DJANGO_CONFIGURATION = TestingConfiguration
+sitepackages = true
 passenv =
     DJANGO_CELERY_BROKER_URL
     DJANGO_DATABASE_URL
