--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get install --no-install-recommends --yes \
           tox \
           gcc g++ binutils libc6-dev \
-          python3-dev python3-pip \
+          python-is-python3 python3-dev python3-pip \
           libpq-dev \
           libgdal-dev gdal-bin gdal-data \
           libproj-dev proj-bin proj-data \
