Fix plugin installs in Docker

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,6 +10,7 @@ services:
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django-project
+      - ./atlascope_plugins:/opt/atlascope-plugins
     ports:
       - 8000:8000
     depends_on:
@@ -33,6 +34,7 @@ services:
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django-project
+      - ./atlascope_plugins:/opt/atlascope-plugins
     depends_on:
       - postgres
       - rabbitmq
