Install system dependencies in GitHub Actions
It's likely that these were already available (otherwise tests would be
failing). explicitly stating them is good practice to ensure our testing
environment lines up with our development environment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,16 @@ jobs:
         ports:
           - 9000:9000
     steps:
+      - name: Install dependencies
+        run: |
+          # Install system libraries for Python packages:
+          sudo apt-get update
+          sudo apt-get install --no-install-recommends --yes \
+            `# C compilers and C standard library development files` \
+            gcc libc6-dev \
+            `# PostgreSQL library development files (psycopg2)` \
+            libpq-dev
+        shell: bash
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
