Specify which tox environments to run in GitHub Actions
By just running `tox`, we were formatting our code before linting it.
This caused GitHub testing to miss problems that are fixable by the
formatters.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        test-type: [lint, check-migrations, test]
     services:
       postgres:
         image: postgres:latest
@@ -43,7 +47,7 @@ jobs:
           pip install tox
       - name: Run tests
         run: |
-          tox
+          tox -e ${{matrix.test-type}}
         env:
           DJANGO_DATABASE_URL: postgres://postgres:postgres@localhost:5432/django
           DJANGO_MINIO_STORAGE_ENDPOINT: localhost:9000
