--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,9 @@ commands =
     black {posargs:.}
 
 [testenv:test]
+# GDAL requires numpy to install. Allowing `sitepackages = true`
+# is the only way I think we can ensure it is pre-installed.
+sitepackages = true
 passenv =
     DJANGO_CELERY_BROKER_URL
     DJANGO_DATABASE_URL
@@ -47,10 +50,20 @@ deps =
     pytest-factoryboy
     pytest-mock
     importlib_metadata
+    # We explicitly reference `gdal` and `pyproj` here
+    # so that their versions can be constrained
+    # with tox's `--force-dep` option.
+    # This allows to us match the correct versions to what
+    # versions of library files are available.
+    gdal
+    pyproj
 commands =
     pytest {posargs}
 
 [testenv:check-migrations]
+# GDAL requires numpy to install. Allowing `sitepackages = true`
+# is the only way I think we can ensure it is pre-installed.
+sitepackages = true
 setenv =
     DJANGO_CONFIGURATION = TestingConfiguration
 passenv =
@@ -63,6 +76,13 @@ extras =
     dev
 deps =
     importlib_metadata
+    # We explicitly reference `gdal` and `pyproj` here
+    # so that their versions can be constrained
+    # with tox's `--force-dep` option.
+    # This allows to us match the correct versions to what
+    # versions of library files are available.
+    gdal
+    pyproj
 commands =
     {envpython} ./manage.py makemigrations --check --dry-run
 
