--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,12 +37,18 @@ jobs:
           # Install system libraries for Python packages:
           sudo apt-get update
           DEBIAN_FRONTEND=noninteractive sudo apt-get install --no-install-recommends --yes \
-            `# C compilers and C standard library development files` \
-            gcc libc6-dev \
+            `# C/C++ compilers and C standard library development files` \
+            gcc g++ binutils libc6-dev \
             `# Python` \
             python-is-python3 python3-dev python3-pip \
             `# PostgreSQL library development files (psycopg2)` \
-            libpq-dev
+            libpq-dev \
+            `# GDAL development files and binary (GeoDjango)` \
+            libgdal-dev gdal-bin gdal-data \
+            `# PROJ development files and binary (GeoDjango)` \
+            libproj-dev proj-bin proj-data \
+            `# GEOS library development files (GeoDjango)` \
+            libgeos-dev
         shell: bash
       - uses: actions/checkout@v2
       - name: Install tox
