--- a/tox.ini
+++ b/tox.ini
@@ -42,6 +42,7 @@ passenv =
 extras =
     dev
 deps =
+    ./atlascope_plugins/atlascope-vandy-importer
     factory-boy
     pytest
     pytest-django
@@ -72,6 +73,7 @@ passenv =
 extras =
     dev
 deps =
+    ./atlascope_plugins/atlascope-vandy-importer
     # We explicitly reference `gdal` and `pyproj` here
     # so that their versions can be constrained
     # with tox's `--force-dep` option.
