--- a/tox.ini
+++ b/tox.ini
@@ -47,6 +47,7 @@ deps =
     pytest-django
     pytest-factoryboy
     pytest-mock
+    pytest-unordered
     django-s3-file-field-client
     # We explicitly reference `gdal` and `pyproj` here
     # so that their versions can be constrained
