CI test env should include vandy importer too

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,7 @@ deps =
     pytest-mock
     pytest-unordered
     django-s3-file-field-client
-    /opt/atlascope-plugins/atlascope-vandy-importer
+    {toxinidir}/atlascope_plugins/atlascope-vandy-importer
     # We explicitly reference `gdal` and `pyproj` here
     # so that their versions can be constrained
     # with tox's `--force-dep` option.
