Add exclusions to flake8 config

--- a/tox.ini
+++ b/tox.ini
@@ -86,6 +86,7 @@ commands =
 [flake8]
 max-line-length = 100
 show-source = True
+exclude = web,.tox
 ignore =
     # closing bracket does not match indentation of opening bracket’s line
     E123
