Direct black/isort to only format files in atlascope package

--- a/tox.ini
+++ b/tox.ini
@@ -26,8 +26,8 @@ deps =
     black
     isort
 commands =
-    isort {posargs:.}
-    black {posargs:.}
+    isort {posargs:atlascope}
+    black {posargs:atlascope}
 
 [testenv:test]
 # GDAL requires numpy to install. Allowing `sitepackages = true`
