--- a/tox.ini
+++ b/tox.ini
@@ -98,7 +98,15 @@ ignore =
     D10,
     # Single vs double quotes conflicting with black
     Q000,
-
+exclude =
+    .git,
+    __pycache__,
+    .tox,
+    .env,
+    .venv,
+    env,
+    venv,
+    */node_modules
 [pytest]
 DJANGO_SETTINGS_MODULE = atlascope.settings
 DJANGO_CONFIGURATION = TestingConfiguration
