configure black to ignore web directory

--- a/tox.ini
+++ b/tox.ini
@@ -98,6 +98,7 @@ ignore =
     D10,
     # Single vs double quotes conflicting with black
     Q000,
+black-config = pyproject.toml
 exclude =
     .git,
     __pycache__,
