Add tile server for colors

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -39,3 +39,10 @@ services:
       - postgres
       - rabbitmq
       - minio
+
+  demotiles:
+    build:
+      context: ./dev/demotiles
+      dockerfile: ./Dockerfile
+    ports:
+      - 9005:9005
