--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
   minio:
     logging:
       driver: none
-    image: minio/minio:latest
+    image: bitnami/minio:2022.3.3
     command: ["server", "/data", "--console-address", ":${DOCKER_MINIO_CONSOLE_PORT-9001}"]
     environment:
       MINIO_ROOT_USER: minioAccessKey
