--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,13 +10,12 @@ services:
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django-project
-      - ./atlascope_plugins:/opt/atlascope-plugins
+      - ./data:/opt/django-project/data
     ports:
       - 8000:8000
     depends_on:
       - postgres
       - rabbitmq
-      - minio
 
   celery:
     build:
@@ -34,11 +33,10 @@ services:
     env_file: ./dev/.env.docker-compose
     volumes:
       - .:/opt/django-project
-      - ./atlascope_plugins:/opt/atlascope-plugins
+      - ./data:/opt/django-project/data
     depends_on:
       - postgres
       - rabbitmq
-      - minio
 
   demotiles:
     build:
