--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "generateTypes": "node src/generateTypesFromSchema.js"
   },
   "dependencies": {
+    "@koumoul/vuetify-jsonschema-form": "^0.36.4",
     "@sentry/vue": "^6.2.0",
     "@vue/composition-api": "^1.0.0-rc.2",
     "axios": "^0.21.1",
@@ -17,7 +18,10 @@
     "geojs": "^1.4.3",
     "swagger-typescript-api": "^9.3.1",
     "vue": "^2.6.11",
+    "vue-color": "^2.8.1",
     "vue-router": "^3.2.0",
+    "vue-swatches": "^2.1.1",
+    "vuedraggable": "^2.24.3",
     "vuetify": "^2.4.0",
     "vuex": "^3.6.2"
   },
