--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install tox
+          pip install --find-links https://girder.github.io/large_image_wheels large-image-converter
       - name: Run tests
         run: |
           tox \
