--- a/web/package.json
+++ b/web/package.json
@@ -57,7 +57,7 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "no-console": "off"
+      "no-console": "warn"
     },
     "overrides": [
       {
