--- a/web/package.json
+++ b/web/package.json
@@ -61,7 +61,8 @@
       "ecmaVersion": 2020
     },
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-alert": "off"
     },
     "overrides": [
       {
