--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install tox
         run: |
-          pip install --upgrade pip
+          python -m pip install --upgrade pip
           pip install tox
           pip install --find-links https://girder.github.io/large_image_wheels large-image-converter
           pip install --find-links https://girder.github.io/large_image_wheels histomicstk
