Add named volume for Docker image to persist pooch cache
`pooch` downloads data into `$XDG_CACHE_HOME`. Since the server runs
as `root`, this is '/root/.cache'. We persist this directory as a named
volume so other containers launched from this image can use previously
downloaded files.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,4 +1,8 @@
 version: '3'
+
+volumes:
+  pooch_cache:
+
 services:
   django:
     build:
@@ -11,6 +15,7 @@ services:
     volumes:
       - .:/opt/django-project
       - ./data:/opt/django-project/data
+      - pooch_cache:/root/.cache/pooch
     ports:
       - 8000:8000
     depends_on:
