--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -60,3 +60,10 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - 9005:9005
+
+  myglance:
+    build:
+      context: ./dev/pvw
+      dockerfile: ./Dockerfile
+    ports:
+      - 9999:9999
