--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,8 @@
     "@sentry/vue": "^6.2.0",
     "@vue/composition-api": "^1.0.0-rc.2",
     "axios": "^0.21.1",
+    "d3-scale-chromatic": "^3.0.0",
     "direct-vuex": "^0.12.1",
-    "distinct-colors": "^3.0.0",
     "geojs": "^1.4.3",
     "swagger-typescript-api": "^9.3.1",
     "vue": "^2.6.11",
@@ -27,6 +27,7 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
+    "@types/d3-scale-chromatic": "^3.0.0",
     "@types/jest": "^24.0.19",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
